# solving-spyweb

./: .gitignore  README.md  ROADMAP.md  package.json  pyproject.toml  tsconfig.json
docs/: local-art-manifest.example.json
docs/game-traces/: 2026-06-08-human-bird-vs-component-sea-round-1.md
docs/strategies/: human-component.md
spyweb/: __init__.py  ai.py  art.py  audit.py  benchmark.py  cli.py  play_cli.py  web.py
spyweb/core/: __init__.py  catalog.py  events.py  game.py  model.py  rules.py  rules_io.py
spyweb/solver/: __init__.py  belief.py  component_policy.py  encoding.py  eta.py  human_policy.py  hybrid_policy.py  policy.py  replay.py  simple_policy.py  universe.py
spyweb/web_static/: app.js  index.html  style.css
src/app/: tui.ts
src/core/: catalog.ts  events.ts  model.ts  rules.test.ts  rules.ts
src/solver/: belief.ts  encoding.ts  replay.test.ts  replay.ts  universe.ts
tests/: test_ai.py  test_art.py  test_audit.py  test_benchmark.py  test_component_policy.py  test_eta.py  test_game.py  test_human_policy.py  test_play_cli.py  test_rules.py  test_rules_io.py  test_simple_policy.py  test_solver.py  test_web.py
